src/objects/Recorded_Message__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recorded Message</relationshipLabel>
        <relationshipName>Recorded_Messages</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>record_message_url__c</fullName>
        <label>Record message Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>Record message Url1</label>
        <type>Url</type>
    </fields>
	<fields>
        <fullName>test2__c</fullName>
        <label>Record message Url2</label>
        <type>Url</type>
    </fields>
    <label>Recorded Message</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Recorded Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recorded Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>